从左上角位移到右下角的动画

--- a/animatordemo/src/main/res/layout/activity_main.xml
+++ b/animatordemo/src/main/res/layout/activity_main.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ontoucheventdemothree.MainActivity">
+    tools:context="com.example.animatordemo.MainActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="matrix"/>
+    <com.example.animatordemo.cview.MyAnimView
+        android:id="@+id/myAnimView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
